# curricust

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh
curricust_proc_macro/: .gitignore  Cargo.toml
example/: base.yml  developercv.cls
example/sections/: award.yml  education.yml
example/util/: dictionary.yml  header.yml
resume_cv_proc_macro/: Cargo.toml
resume_cv_proc_macro/src/: field.rs  lib.rs
src/: main.rs
src/attr/: context.rs  mod.rs  parse.rs  text_with_attributes.rs
src/element/: base.rs  header.rs  mod.rs  section.rs  text_with_attributes.rs
src/element/item/: education_item.rs  mod.rs  project_item.rs
src/header/: mod.rs  skills_element.rs  summary_element.rs
src/item/: award_item.rs  education_item.rs  job_item.rs  mod.rs  project_item.rs  talk_item.rs
src/printers/: cv_developer_latex_printer.rs  latex_printer.rs  markdown_to_latex.rs  mod.rs  printer.rs  rmarkdown.rs
src/util/: args.rs  error.rs  file.rs  mod.rs  yaml.rs
src/writer/: latex_writer.rs  markdown_to_latex.rs  mod.rs  write.rs
template/: developercv.cls
