[package]
name = "resume-cv-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
multimap = "0.9.0"
regex = "1.10.2"
derive_builder = "0.12.0"
lazy_static = "1.4.0"
resume_cv_proc_macro = { path = "resume_cv_proc_macro" }
markdown = "1.0.0-alpha.14"
variant_count = "1.1.0"
