[package]
name = "curricust"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
multimap = "0.9.0"
regex = "1.10.2"
derive_builder = "0.12.0"
lazy_static = "1.4.0"
curricust_proc_macro = { path = "curricust_proc_macro" }
markdown = "1.0.0-alpha.14"
variant_count = "1.1.0"
futures = "0.3"
tokio = { version = "1", features = ["rt", "macros", "net", "rt-multi-thread"] }
reqwest = "0.11"
clap = { version = "4.4.7", features = ["derive"] }
