[package]
name = "curricust_proc_macro"
version = "0.1.0"
edition = "2021"

[lib]
name = "curricust_proc_macro"
path = "src/lib.rs"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
